# prediction-markets

./: .gitignore  pyproject.toml
.github/workflows/: snapshot.yml
data/observations/: 2026-05-05.parquet  2026-05-06.parquet  2026-05-07.parquet  2026-05-08.parquet  2026-05-09.parquet  2026-05-10.parquet  2026-05-11.parquet  2026-05-12.parquet  2026-05-13.parquet  2026-05-14.parquet  2026-05-15.parquet  2026-05-16.parquet  2026-05-17.parquet  2026-05-18.parquet  2026-05-19.parquet  2026-05-20.parquet  2026-05-21.parquet  2026-05-22.parquet  2026-05-23.parquet  2026-05-24.parquet  2026-05-25.parquet  2026-05-26.parquet  2026-05-27.parquet  2026-05-28.parquet  2026-05-29.parquet  2026-05-30.parquet  2026-05-31.parquet  2026-06-01.parquet  2026-06-02.parquet  2026-06-03.parquet  2026-06-04.parquet  2026-06-05.parquet  2026-06-06.parquet  2026-06-07.parquet  2026-06-08.parquet  2026-06-09.parquet  2026-06-10.parquet  2026-06-11.parquet  2026-06-12.parquet  2026-06-13.parquet  (+41 more)
predmkt/: backtest.py  fed.py  kalshi.py  mpt.py  observer.py  pairs.py  paper.py  polymarket.py  watchlist.py
scripts/: analyze_obs.py  diagnose_v0.py  find_pairs.py  full_analysis.py  inspect_pga.py  run_backtest.py  snapshot_markets.py  verify_fed.py  verify_kalshi.py  verify_mpt.py  verify_paper.py  verify_polymarket.py
